syntax =  "proto3";

option go_package = "github.com/aclgo/grpc-jwt/proto";  

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string name = 2;
    string last_name = 3;
    string password = 4;
    string email = 5;
    string role = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreateUserRequest {
    string name = 1;
    string last_name = 2;
    string password = 3;
    string email = 4;
}

message CreatedUserResponse {
    User user = 1;
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message Tokens {
    string access_token = 1;
    string refresh_token = 2;
}

message UserLoginResponse{
    Tokens tokens = 1; 
}

message UserLogoutRequest{
    string access_token = 1;
    string refresh_token = 2;    
}

message UserLogoutResponse{

}

message FindByIdRequest {
    string id = 1;
}

message FindByIdResponse{
    User user = 1;
}

message FindByEmailRequest{
    string email = 1;
}

message FindByEmailResponse{
    User user = 1;
}

message UpdateRequest {
    string id = 1;
    string name = 2;
    string lastname = 3;
    string password = 4;
    string email = 5;
}

message UpdateResponse {
    User user = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    string UserID = 1;
    string UserRole = 2;
}

service UserService {
    rpc Register(CreateUserRequest) returns (CreatedUserResponse);
    rpc Login(UserLoginRequest)returns (UserLoginResponse);
    rpc Logout(UserLogoutRequest) returns (UserLogoutResponse);
    rpc FindById(FindByIdRequest) returns (FindByIdResponse);
    rpc FindByEmail(FindByEmailRequest) returns (FindByEmailResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

